task_detection_tpu/tpu_integrated_accel/tpu_integrated_accel/logs/hls_run_csim_16062.backup.log
  **** HLS Build v2025.2 6295257
INFO: [HLS 200-2005] Using work_dir /home/dlohchab/projects/Verilog/DVCON/task_detection_tpu/tpu_integrated_accel/tpu_integrated_accel 
INFO: [HLS 200-2176] Writing Vitis IDE component file /home/dlohchab/projects/Verilog/DVCON/task_detection_tpu/tpu_integrated_accel/tpu_integrated_accel/vitis-comp.json
INFO: [HLS 200-10] Creating and opening component '/home/dlohchab/projects/Verilog/DVCON/task_detection_tpu/tpu_integrated_accel/tpu_integrated_accel'.
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.amd.com/access/sources/dita/topic?Doc_Version=2025.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-2174] Applying component config ini file hls_config.cfg
INFO: [HLS 200-1465] Applying config ini 'syn.file=../task_detection_tpu/tpu_accel.cpp' from hls_config.cfg(9)
INFO: [HLS 200-10] Adding design file '/home/dlohchab/projects/Verilog/DVCON/task_detection_tpu/task_detection_tpu/tpu_accel.cpp' to the project
INFO: [HLS 200-1465] Applying config ini 'syn.file=../task_detection_tpu/pe.cpp' from hls_config.cfg(10)
INFO: [HLS 200-10] Adding design file '/home/dlohchab/projects/Verilog/DVCON/task_detection_tpu/task_detection_tpu/pe.cpp' to the project
INFO: [HLS 200-1465] Applying config ini 'syn.file=../task_detection_tpu/systolic_8x8.cpp' from hls_config.cfg(11)
INFO: [HLS 200-10] Adding design file '/home/dlohchab/projects/Verilog/DVCON/task_detection_tpu/task_detection_tpu/systolic_8x8.cpp' to the project
INFO: [HLS 200-1465] Applying config ini 'tb.file=../task_detection_tpu/tpu_accel_tb.cpp' from hls_config.cfg(7)
INFO: [HLS 200-10] Adding test bench file '/home/dlohchab/projects/Verilog/DVCON/task_detection_tpu/task_detection_tpu/tpu_accel_tb.cpp' to the project
INFO: [HLS 200-1465] Applying config ini 'syn.top=task_detection_accel' from hls_config.cfg(8)
INFO: [HLS 200-1465] Applying config ini 'flow_target=vivado' from hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.amd.com/access/sources/dita/topic?Doc_Version=2025.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying config ini 'part=xc7k325tffg900-2' from hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xc7k325t-ffg900-2'
INFO: [HLS 200-1465] Applying config ini 'package.output.format=ip_catalog' from hls_config.cfg(5)
INFO: [HLS 200-2176] Writing Vitis IDE component file /home/dlohchab/projects/Verilog/DVCON/task_detection_tpu/tpu_integrated_accel/tpu_integrated_accel/vitis-comp.json
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [HLS 200-2191] C-Simulation will use clang-16 as the compiler
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../../task_detection_tpu/tpu_accel_tb.cpp in debug mode
   Compiling ../../../../../task_detection_tpu/systolic_8x8.cpp in debug mode
   Compiling ../../../../../task_detection_tpu/pe.cpp in debug mode
   Compiling ../../../../../task_detection_tpu/tpu_accel.cpp in debug mode
../../../../../task_detection_tpu/tpu_accel.cpp:14:5: error: use of undeclared identifier 'systolic_8x8'; did you mean 'systolic_16x16'?
    systolic_8x8(A_in, B_in, C_out, true); 
    ^~~~~~~~~~~~
    systolic_16x16
../../../../../task_detection_tpu/systolic_16x16.h:6:6: note: 'systolic_16x16' declared here
void systolic_16x16(
     ^
../../../../../task_detection_tpu/tpu_accel.cpp:14:30: error: cannot initialize a parameter of type 'data_t (*)[16]' (aka 'ap_fixed<16, 6> (*)[16]') with an lvalue of type 'data_t[8][8]' (aka 'ap_fixed<16, 6>[8][8]')
    systolic_8x8(A_in, B_in, C_out, true); 
                             ^~~~~
../../../../../task_detection_tpu/systolic_16x16.h:9:12: note: passing argument to parameter 'C_out' here
    data_t C_out[16][16],
           ^
../../../../../task_detection_tpu/tpu_accel.cpp:25:9: error: use of undeclared identifier 'systolic_8x8'; did you mean 'systolic_16x16'?
        systolic_8x8(A_in, B_in, C_out, false);
        ^~~~~~~~~~~~
        systolic_16x16
../../../../../task_detection_tpu/systolic_16x16.h:6:6: note: 'systolic_16x16' declared here
void systolic_16x16(
     ^
../../../../../task_detection_tpu/tpu_accel.cpp:25:34: error: cannot initialize a parameter of type 'data_t (*)[16]' (aka 'ap_fixed<16, 6> (*)[16]') with an lvalue of type 'data_t[8][8]' (aka 'ap_fixed<16, 6>[8][8]')
        systolic_8x8(A_in, B_in, C_out, false);
                                 ^~~~~
../../../../../task_detection_tpu/systolic_16x16.h:9:12: note: passing argument to parameter 'C_out' here
    data_t C_out[16][16],
           ^
../../../../../task_detection_tpu/tpu_accel.cpp:32:9: error: use of undeclared identifier 'systolic_8x8'; did you mean 'systolic_16x16'?
        systolic_8x8(A_in, B_in, C_out, false);
        ^~~~~~~~~~~~
        systolic_16x16
../../../../../task_detection_tpu/systolic_16x16.h:6:6: note: 'systolic_16x16' declared here
void systolic_16x16(
     ^
../../../../../task_detection_tpu/tpu_accel.cpp:32:34: error: cannot initialize a parameter of type 'data_t (*)[16]' (aka 'ap_fixed<16, 6> (*)[16]') with an lvalue of type 'data_t[8][8]' (aka 'ap_fixed<16, 6>[8][8]')
        systolic_8x8(A_in, B_in, C_out, false);
                                 ^~~~~
../../../../../task_detection_tpu/systolic_16x16.h:9:12: note: passing argument to parameter 'C_out' here
    data_t C_out[16][16],
           ^
6 errors generated.
make: *** [csim.mk:106: obj/tpu_accel.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
ERROR: CSIM Failed
INFO: [HLS 200-112] Total CPU user time: 16.14 seconds. Total CPU system time: 1.71 seconds. Total elapsed time: 35.35 seconds; peak allocated memory: 275.426 MB.
